<resources>
    <string name="app_name">Swachev</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_foryou">Foryou</string>
    <string name="title_yourList">YourList</string>
    <string name="title_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="i_am_a">I am a...</string>
    <string name="shopper">Shopper</string>
    <string name="business_owner">Business Owner</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">LogIn</string>
    <string name="or">OR</string>
    <string name="start_identity">Start Identification</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="next">Next</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="signup">SignUp</string>
    <string name="addresss">Address</string>
    <string name="apt_or_suite">Apt. or Suite #</string>
    <string name="city">City</string>
    <string name="zip_code">Zip Code</string>
    <string name="country">Country</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="skip_and_set_up_later">Skip and set up later</string>
    <string name="let_s_start">Let\'s start!</string>
    <string name="BusinessRegister">Business Name</string>
    <string name="Business_loc">Business Location</string>

</resources>
