<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_category">

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.swachev.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/navigation_foryou"
        android:name="com.swachev.ui.foryou.ForYouFragment"
        android:label="@string/title_foryou"
        tools:layout="@layout/fragment_foryou" />

    <fragment
        android:id="@+id/navigation_yourList"
        android:name="com.swachev.ui.yourList.YourListFragment"
        android:label="@string/title_yourList"
        tools:layout="@layout/fragment_your_list" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.swachev.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/profile_fragment" />

    <fragment
        android:id="@+id/navigation_category"
        android:name="com.swachev.ui.category.CategoryFragment"
        tools:layout="@layout/fragment_category" >
        <action
            android:id="@+id/action_navigation_category_to_navigation_signIn"
            app:destination="@id/navigation_signIn" />
    </fragment>

    <fragment
        android:id="@+id/navigation_signIn"
        android:name="com.swachev.ui.auth.SignIn"
        tools:layout="@layout/sign_in_fragment" >
        <action
            android:id="@+id/action_navigation_signIn_to_navigation_register"
            app:destination="@id/navigation_register" />
    </fragment>

    <fragment
        android:id="@+id/navigation_register"
        android:name="com.swachev.ui.auth.RegisterFragment"
        tools:layout="@layout/register_fragment" />
</navigation>
