<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:overScrollMode="ifContentScrolls"
    android:scrollbarStyle="outsideOverlay"
    xmlns:app="http://schemas.android.com/apk/res-auto">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.auth.SignIn"
    android:orientation="vertical">


    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/swachez"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userName_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:hintEnabled="false"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        app:errorEnabled="true"
        app:boxStrokeColor="#00AFF0"
        app:boxStrokeWidth="2dp"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        style="@style/EditTextInputLayoutStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:id="@+id/signIn_userName"
            android:hint="@string/user_name"
            android:drawableStart="@drawable/ic_person"/>


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:hintEnabled="false"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        app:errorEnabled="true"
        app:boxStrokeColor="#00AFF0"
        app:boxStrokeWidth="2dp"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimaryDark"
        style="@style/EditTextInputLayoutStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:id="@+id/signIn_password"
            android:hint="@string/password"
            android:drawableStart="@drawable/ic_lock"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signIn_button"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:text="@string/login"
        android:textSize="16sp"
        android:fontFamily="@font/roboto"
        android:layout_marginTop="16dp"
       android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        style="@style/MyButton"
        android:textColor="@color/white"
        app:elevation="8dp"
        android:elevation="8dp"
        android:clickable="true"
        android:focusable="true"
        app:cornerRadius="25dp"
        android:backgroundTint="@color/colorPrimaryDark"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:fontFamily="@font/roboto"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/google_signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_google"
            android:clickable="true"
            android:focusable="true"
            />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/facebook_signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_facebook"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginStart="22dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:fontFamily="@font/roboto"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@color/colorPrimaryDark"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Don't have an account yet?"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/roboto"/>

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:fontFamily="@font/roboto"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@color/colorPrimaryDark"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="8dp"
        android:layout_marginTop="4dp"/>




</LinearLayout>
</ScrollView>