<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:overScrollMode="ifContentScrolls"
    android:scrollbarStyle="outsideOverlay"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.auth.RegisterFragment">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/address"
                android:layout_marginBottom="16dp" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/address_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:hintEnabled="false"
            android:layout_marginLeft="60dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp"
            app:errorEnabled="true"
            app:boxStrokeColor="#00AFF0"
            app:boxStrokeWidth="2dp"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            style="@style/EditTextInputLayoutStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPostalAddress"
                android:id="@+id/register_address"
                android:hint="@string/addresss"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_placeholder"/>

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/appt_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:hintEnabled="false"
            android:layout_marginLeft="60dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp"
            app:errorEnabled="true"
            app:boxStrokeColor="#00AFF0"
            app:boxStrokeWidth="2dp"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            android:layout_marginTop="8dp"
            style="@style/EditTextInputLayoutStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="text"
                android:id="@+id/register_apt"
                android:hint="@string/apt_or_suite"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_block"/>

        </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/city_layout"
                style="@style/EditTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="60dp"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:layout_marginRight="60dp"
                app:boxStrokeColor="#00AFF0"
                app:boxStrokeWidth="2dp"
                app:errorEnabled="true"
                app:hintEnabled="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_city"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:drawableStart="@drawable/ic_buildings"
                    android:drawablePadding="8dp"
                    android:hint="@string/city"
                    android:inputType="textPostalAddress"
                    android:maxWidth="80dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/zipCode_layout"
                style="@style/EditTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="end"
                app:boxBackgroundColor="@color/white"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="60dp"
                android:layout_marginEnd="60dp"
                android:layout_marginStart="60dp"
                android:layout_marginRight="60dp"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="#00AFF0"
                app:boxStrokeWidth="2dp"
                app:errorEnabled="true"
                app:hintEnabled="false"
                app:layout_constraintBottom_toBottomOf="@+id/city_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/city_layout"
                app:layout_constraintTop_toTopOf="@+id/city_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_zipCode"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:drawablePadding="8dp"
                    android:hint="@string/zip_code"
                    android:inputType="number"
                    android:drawableStart="@drawable/ic_zip_code"
                    android:maxWidth="100dp"/>

            </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/country_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:hintEnabled="false"
            android:layout_marginLeft="60dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp"
            app:errorEnabled="true"
            app:boxStrokeColor="#00AFF0"
            app:boxStrokeWidth="2dp"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            android:layout_marginTop="8dp"
            style="@style/EditTextInputLayoutStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="text"
                android:id="@+id/register_country"
                android:hint="@string/country"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_world"/>

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.button.MaterialButton
            android:id="@+id/registerNext_button"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:text="@string/next"
            android:textSize="16sp"
            android:fontFamily="@font/roboto"
            android:layout_marginTop="16dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            style="@style/MyButton"
            android:textColor="@color/white"
            app:elevation="8dp"
            android:elevation="8dp"
            android:clickable="true"
            android:focusable="true"
            app:cornerRadius="25dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/colorPrimaryDark"/>


    </LinearLayout>
</ScrollView>